fix navbar word wrap bug

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -40,6 +40,7 @@
   }
   .navbar-nav {
     color: #676767;
+    white-space: nowrap;
     hr {
       display: none;
     }
